--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"[^.]*"
 	],
 	"devDependencies": {
+		"@types/wordpress__block-editor": "^14.21.2",
+		"@types/wordpress__i18n": "^3.11.0",
+		"@wordpress/block-editor": "^15.9.0",
 		"@wordpress/scripts": "^31.1.0"
 	}
 }
