--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/wordpress__i18n": "^3.11.0",
 		"@wordpress/block-editor": "^15.9.0",
 		"@wordpress/scripts": "^31.1.0",
+		"glob": "^13.0.0",
 		"json-schema-to-typescript": "^15.0.4"
 	}
 }
