--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
+		"generate-types": "node ./generate-block-attribute-types.js",
+		"prebuild": "npm run generate-types",
+		"prestart": "npm run generate-types",
+		"prelint:js": "npm run generate-types",
+		"preformat": "npm run generate-types",
 		"build": "wp-scripts build --experimental-modules",
 		"format": "wp-scripts format",
 		"lint:css": "wp-scripts lint-style",
